--- a/index.html
+++ b/index.html
@@ -140,115 +140,13 @@
             </div>
         </div>
     </div>
-
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    < src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
-    <script>
-        // --- FIREBASE CONFIG ---
-        const firebaseConfig = {
-            apiKey: "AIzaSyDFHskUWiyHhZke3KT9kkOtFI_gPsKfiGo",
-            authDomain: "itzhoyoo-f9f7e.firebaseapp.com",
-            databaseURL: "https://itzhoyoo-f9f7e-default-rtdb.firebaseio.com",
-            projectId: "itzhoyoo-f9f7e",
-            storageBucket: "itzhoyoo-f9f7e.filestorage.app",
-            messagingSenderId: "1094792075584",
-            appId: "1:1094792075584:web:d49e9c3f899d3cd31082a5",
-            measurementId: "G-LLT6F9WRKH"
-        };
+    <script src="firebase-config.js"></script>
+    <script src="script.js"></script>
 
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const db = firebase.firestore();
 
-        // --- UI UTILITIES ---
-        function notify(msg) {
-            const container = document.getElementById('toast-container');
-            const toast = document.createElement('div');
-            toast.className = 'toast glass border border-white/20 px-6 py-3 rounded-2xl text-[10px] font-black uppercase tracking-widest mb-3 pointer-events-auto text-white shadow-2xl';
-            toast.innerText = msg;
-            container.appendChild(toast);
-            setTimeout(() => { toast.style.opacity = '0'; setTimeout(() => toast.remove(), 500); }, 3000);
-        }
-
-        function toggleModal(show) {
-            const modal = document.getElementById('auth-modal');
-            modal.classList.toggle('hidden', !show);
-            // Block background scrolling
-            document.body.classList.toggle('modal-open', show);
-        }
-        
-        function setTab(type) {
-            const isReg = type === 'register';
-            document.getElementById('register-fields').classList.toggle('hidden', !isReg);
-            document.getElementById('tab-login').classList.toggle('text-neutral-600', isReg);
-            document.getElementById('tab-login').classList.toggle('text-white', !isReg);
-            document.getElementById('tab-register').classList.toggle('text-white', isReg);
-            document.getElementById('tab-register').classList.toggle('text-neutral-600', !isReg);
-            document.getElementById('auth-submit-btn').innerText = isReg ? 'Create Account' : 'Submit';
-        }
-
-        // --- APP FLOW ---
-        window.addEventListener('load', () => {
-            setTimeout(() => {
-                document.getElementById('main-skeleton').classList.add('hidden');
-                document.getElementById('hero-content').classList.remove('hidden');
-                notify("AI Neural Network Online");
-            }, 2500);
-        });
-
-        // File Selection logic
-        document.getElementById('file-input').onchange = (e) => {
-            if(e.target.files[0]) {
-                notify("Starting 11 Scan Initiated...");
-                setTimeout(() => {
-                    const hasMore = confirm("AI detected 8+ substitutes. Do you want to scan the full bench? (Premium Feature)");
-                    if(hasMore) {
-                        notify("Unlock Premium to scan extra substitutes.");
-                        toggleModal(true);
-                    } else {
-                        notify("Calculating final squad value...");
-                    }
-                }, 2000);
-            }
-        };
-
-        // --- AUTH LOGIC ---
-        
-        // Google Login
-        document.getElementById('google-login-btn').onclick = () => {
-            const provider = new firebase.auth.GoogleAuthProvider();
-            auth.signInWithPopup(provider).then((res) => {
-                notify(`Welcome, ${res.user.displayName}`);
-                toggleModal(false);
-            }).catch(() => notify("Login Failed"));
-        };
-
-        // Email Submit
-        document.getElementById('auth-submit-btn').onclick = () => {
-            const email = document.getElementById('auth-email').value;
-            const password = document.getElementById('auth-password').value;
-            const isReg = !document.getElementById('register-fields').classList.contains('hidden');
-
-            if(!email || !password) return notify("Missing Credentials");
-
-            if(isReg) {
-                auth.createUserWithEmailAndPassword(email, password)
-                    .then(() => { notify("Account Created!"); toggleModal(false); })
-                    .catch(err => notify(err.message));
-            } else {
-                auth.signInWithEmailAndPassword(email, password)
-                    .then(() => { notify("Logged In!"); toggleModal(false); })
-                    .catch(err => notify("Invalid Login"));
-            }
-        };
-
-        // Modal Close on click outside
-        document.getElementById('auth-modal').onclick = (e) => {
-            if(e.target.id === 'auth-modal') toggleModal(false);
-        };
-    </script>
 </body>
 </html>
