--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>DLS Value | AI Squad Appraisal</title>
     <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-black text-white antialiased select-none overflow-x-hidden" oncontextmenu="return false;">
 
@@ -20,9 +19,26 @@
                      class="h-9 w-auto object-contain relative z-10 opacity-0 transition-opacity duration-500" 
                      onload="document.getElementById('logo-skeleton').classList.add('hidden'); this.classList.remove('opacity-0');">
             </div>
+
             <button id="header-auth-btn" onclick="toggleModal(true)" class="glass border border-white/20 px-6 py-2 rounded-xl text-[10px] font-black uppercase tracking-widest active:scale-95 transition-all">
                 Login
             </button>
+
+            <div id="user-profile-hub" class="hidden flex items-center gap-3">
+                <div class="flex flex-col items-end">
+                    <div class="flex items-center gap-2">
+                        <span id="display-username" class="text-[10px] font-black uppercase tracking-tighter text-white">Guest</span>
+                        <span id="status-badge" class="text-[7px] px-1.5 py-0.5 rounded font-black uppercase tracking-widest">FREE</span>
+                    </div>
+                    <div class="flex items-center gap-1 mt-0.5">
+                        <span id="token-count" class="text-[9px] font-bold text-neutral-400">0</span>
+                        <span class="text-[7px] font-black text-neutral-500 uppercase">Tokens</span>
+                    </div>
+                </div>
+                <div class="w-9 h-9 rounded-full border-2 border-white/10 overflow-hidden bg-neutral-900">
+                    <img id="user-avatar" src="" class="w-full h-full object-cover">
+                </div>
+            </div>
         </div>
     </header>
 
@@ -49,59 +65,18 @@
 
             <section class="w-full mt-10 overflow-hidden">
                 <div class="flex items-center justify-between mb-4 px-6 text-neutral-500">
-                    <h3 class="text-[9px] font-black uppercase tracking-[0.3em]">Trust Show Reveals</h3>
-                    <span class="text-[8px] font-bold text-green-500 animate-pulse uppercase tracking-widest">Live Feed</span>
+                    <h3 class="text-[9px] font-black uppercase tracking-[0.3em]">Recent Appraisals</h3>
+                    <span class="text-[8px] font-bold text-green-500 animate-pulse uppercase tracking-widest">Live</span>
                 </div>
                 <div class="w-full glass border border-white/5 py-4 overflow-hidden relative">
                     <div class="ticker-track">
                         <div class="flex gap-4 px-4 items-center">
                             <div class="flex items-center gap-2 bg-white/5 px-4 py-2 rounded-xl border border-white/5"><span class="text-[10px] text-neutral-500 font-bold">@NeymarJR</span><span class="text-[10px] font-black text-white">$142.50</span></div>
                             <div class="flex items-center gap-2 bg-white/5 px-4 py-2 rounded-xl border border-white/5"><span class="text-[10px] text-neutral-500 font-bold">@DLS_King</span><span class="text-[10px] font-black text-white">$89.00</span></div>
-                            <div class="flex items-center gap-2 bg-white/5 px-4 py-2 rounded-xl border border-white/5"><span class="text-[10px] text-neutral-500 font-bold">@SquadGoat</span><span class="text-[10px] font-black text-white">$210.25</span></div>
-                        </div>
-                        <div class="flex gap-4 px-4 items-center">
-                            <div class="flex items-center gap-2 bg-white/5 px-4 py-2 rounded-xl border border-white/5"><span class="text-[10px] text-neutral-500 font-bold">@NeymarJR</span><span class="text-[10px] font-black text-white">$142.50</span></div>
-                            <div class="flex items-center gap-2 bg-white/5 px-4 py-2 rounded-xl border border-white/5"><span class="text-[10px] text-neutral-500 font-bold">@DLS_King</span><span class="text-[10px] font-black text-white">$89.00</span></div>
-                            <div class="flex items-center gap-2 bg-white/5 px-4 py-2 rounded-xl border border-white/5"><span class="text-[10px] text-neutral-500 font-bold">@SquadGoat</span><span class="text-[10px] font-black text-white">$210.25</span></div>
                         </div>
                     </div>
                 </div>
             </section>
-
-            <section class="w-full mt-12 px-6">
-                <div class="flex items-center justify-between mb-6">
-                    <h3 class="text-[9px] font-black uppercase tracking-[0.3em] text-neutral-500">3 Steps to Appraise</h3>
-                    <span class="text-[8px] font-bold text-neutral-600 uppercase tracking-widest">Swipe →</span>
-                </div>
-                <div class="flex overflow-x-auto gap-4 no-scrollbar pb-6 snap-x snap-mandatory px-2">
-                    <div class="min-w-[85%] snap-center glass border border-white/10 p-6 rounded-[28px] flex flex-col gap-4">
-                        <div class="w-8 h-8 rounded-full bg-white text-black flex items-center justify-center font-black text-xs">01</div>
-                        <h4 class="text-xs font-black uppercase tracking-widest">Capture Squad</h4>
-                        <p class="text-[10px] text-neutral-500 leading-relaxed">Take a screenshot of your main Starting 11 screen.</p>
-                    </div>
-                    <div class="min-w-[85%] snap-center glass border border-amber-500/20 p-6 rounded-[28px] flex flex-col gap-4 bg-amber-500/5">
-                        <div class="w-8 h-8 rounded-full bg-amber-500 text-black flex items-center justify-center font-black text-xs">02</div>
-                        <h4 class="text-xs font-black uppercase tracking-widest flex items-center gap-2">
-                            Extra Subs <span class="bg-amber-500 text-[7px] px-1.5 py-0.5 rounded text-black font-black uppercase">PREMIUM</span>
-                        </h4>
-                        <p class="text-[10px] text-neutral-500 leading-relaxed">DLS only shows 8 subs. Premium users can upload a 2nd screen for the full bench.</p>
-                    </div>
-                    <div class="min-w-[85%] snap-center glass border border-white/10 p-6 rounded-[28px] flex flex-col gap-4">
-                        <div class="w-8 h-8 rounded-full bg-white text-black flex items-center justify-center font-black text-xs">03</div>
-                        <h4 class="text-xs font-black uppercase tracking-widest">AI Valuation</h4>
-                        <p class="text-[10px] text-neutral-500 leading-relaxed">Our Gemini AI scans both screens to calculate your certified market value.</p>
-                    </div>
-                </div>
-            </section>
-
-            <footer class="w-full mt-10 mb-10 px-6 text-center opacity-40">
-                <p class="text-[8px] font-black uppercase tracking-[0.5em] mb-4">DLS Value AI Core 2.6.0</p>
-                <div class="flex justify-center gap-6">
-                    <span class="text-[8px] font-bold">STABLE</span>
-                    <span class="text-[8px] font-bold">SECURE</span>
-                    <span class="text-[8px] font-bold">VERIFIED</span>
-                </div>
-            </footer>
         </div>
     </main>
 
@@ -136,16 +111,16 @@
                 <button id="auth-submit-btn" class="w-full border border-white/20 hover:bg-white hover:text-black font-black py-4 rounded-xl text-[10px] uppercase tracking-widest active:scale-95 transition-all text-white mt-2">
                     Submit
                 </button>
-                <button onclick="notify('Reset link sent to email!')" class="w-full text-[9px] text-neutral-500 uppercase font-black tracking-widest mt-2 hover:text-white transition-colors">Reset Password</button>
             </div>
         </div>
     </div>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
-<script src="script.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
