--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
-    <script src="script.js"></script>
+    <div id="app"></div>
+
+    <script type="module" src="firebase.js"></script>
+    
+    <script type="module" src="script.js"></script>
+    
 </body>
 </html>
