--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark App</title>
+    <meta name="color-scheme" content="dark">
+    <title>Glassy Black App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div id="app"></div>
+    <div id="app">
+        </div>
 
     <script type="module" src="firebase.js"></script>
-    
     <script type="module" src="script.js"></script>
-    
 </body>
 </html>
