--- a/index.html
+++ b/index.html
@@ -7,12 +7,41 @@
     <title>Dark Glass App</title>
     
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        /* Profile Layout inside the racing button */
+        .profile-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 0 10px;
+            width: 100%;
+            height: 100%;
+        }
+
+        .profile-pic {
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            border: 1px solid var(--cyan);
+            object-fit: cover;
+        }
+
+        .username-display {
+            font-size: 0.85rem;
+            font-weight: 500;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            color: var(--text);
+        }
+    </style>
 </head>
 <body>
 
     <header>
         <div class="btn-wrapper" id="header-btn-container">
-            <button class="login-trigger" id="auth-status-btn">Login</button>
+            <button class="login-trigger" id="auth-ui-target">Login</button>
         </div>
     </header>
 
@@ -29,8 +58,7 @@
         </div>
     </div>
 
-    <div id="app">
-        </div>
+    <div id="app"></div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -41,9 +69,8 @@
             onAuthStateChanged,
             signOut 
         } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // 1. Firebase Configuration
         const firebaseConfig = {
             apiKey: "AIzaSyDFHskUWiyHhZke3KT9kkOtFI_gPsKfiGo",
             authDomain: "itzhoyoo-f9f7e.firebaseapp.com",
@@ -57,29 +84,22 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        // 2. UI Elements
         const modal = document.getElementById('login-modal');
         const authTitle = document.getElementById('auth-title');
         const mainBtn = document.getElementById('main-btn');
         const authToggle = document.getElementById('auth-toggle');
-        const authStatusBtn = document.getElementById('auth-status-btn');
+        const uiTarget = document.getElementById('auth-ui-target');
         const closeBtn = document.getElementById('close-modal-btn');
         const headerBtnWrap = document.getElementById('header-btn-container');
 
         let isLogin = true;
 
-        // 3. UI Interaction Logic
         const toggleModal = () => {
             modal.style.display = (modal.style.display === 'flex') ? 'none' : 'flex';
         };
 
         const switchAuth = () => {
             isLogin = !isLogin;
-            const card = document.querySelector('.auth-card');
-            card.style.animation = 'none';
-            card.offsetHeight; // trigger reflow
-            card.style.animation = 'slideUp 0.4s ease';
-
             if(isLogin) {
                 authTitle.innerText = "Welcome";
                 mainBtn.innerText = "Enter Dimension";
@@ -91,33 +111,34 @@
             }
         };
 
-        // Event Listeners for UI
+        // Handle Logout or Open Modal
         headerBtnWrap.addEventListener('click', () => {
             if (auth.currentUser) {
-                signOut(auth);
+                if(confirm("Exit the dimension?")) signOut(auth);
             } else {
                 toggleModal();
             }
         });
+
         closeBtn.addEventListener('click', toggleModal);
         authToggle.addEventListener('click', switchAuth);
 
-        // 4. Firebase Auth Execution
         mainBtn.addEventListener('click', async () => {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-
-            if (!email || !password) return alert("Credentials required to manifest.");
+            if (!email || !password) return alert("Credentials required.");
 
             try {
                 if (isLogin) {
-                    // Sign In
                     await signInWithEmailAndPassword(auth, email, password);
                 } else {
-                    // Register + Create Firestore Profile
                     const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                    // Extract username from email for default display
+                    const username = email.split('@')[0];
                     await setDoc(doc(db, "explorers", userCredential.user.uid), {
+                        username: username,
                         email: email,
+                        photoURL: `https://ui-avatars.com/api/?name=${username}&background=00ffff&color=000000`,
                         created: new Date().toISOString()
                     });
                 }
@@ -127,14 +148,32 @@
             }
         });
 
-        // 5. Auth State Observer
-        onAuthStateChanged(auth, (user) => {
+        // --- DYNAMIC UI UPDATER ---
+        onAuthStateChanged(auth, async (user) => {
             if (user) {
-                authStatusBtn.innerText = "Logout";
-                document.getElementById('app').innerHTML = `<h1>Welcome to the Dimension, ${user.email}</h1>`;
+                // Fetch username from Firestore
+                const docRef = doc(db, "explorers", user.uid);
+                const docSnap = await getDoc(docRef);
+                let username = user.email.split('@')[0];
+                let photo = `https://ui-avatars.com/api/?name=${username}&background=00ffff&color=000000`;
+
+                if (docSnap.exists()) {
+                    username = docSnap.data().username;
+                    photo = docSnap.data().photoURL || photo;
+                }
+
+                // Inject Profile UI into the racing button
+                uiTarget.innerHTML = `
+                    <div class="profile-container">
+                        <img src="${photo}" class="profile-pic" alt="avatar">
+                        <span class="username-display">@${username}</span>
+                    </div>
+                `;
+                document.getElementById('app').innerHTML = `<h1>Access Granted: ${username}</h1>`;
             } else {
-                authStatusBtn.innerText = "Login";
-                document.getElementById('app').innerHTML = `<h1>Dimension Locked. Please Login.</h1>`;
+                // Reset to Login button
+                uiTarget.innerHTML = `Login`;
+                document.getElementById('app').innerHTML = `<h1>Dimension Locked.</h1>`;
             }
         });
     </script>
